# ChangeLog for sys-libs/timezone-data
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.218 2009/12/26 17:00:45 vapier Exp $

*timezone-data-2009t (26 Dec 2009)

  26 Dec 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009t.ebuild:
  Version bump #297816 by Rodrigo Severo.

  13 Dec 2009; Mike Frysinger <vapier@gentoo.org>
  timezone-data-2009s.ebuild:
  Stabilize for everyone #296685 by Dror Levin.

*timezone-data-2009s (18 Nov 2009)

  18 Nov 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009s.ebuild:
  Version bump #293404 by Rodrigo Severo.

  18 Nov 2009; Mike Frysinger <vapier@gentoo.org>
  timezone-data-2009p.ebuild:
  Mark ppc64 stable #291680.

  14 Nov 2009; Raúl Porcel <armin76@gentoo.org> timezone-data-2009p.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #291680

  14 Nov 2009; Markus Meier <maekke@gentoo.org> timezone-data-2009p.ebuild:
  amd64/arm/x86 stable, bug #291680

*timezone-data-2009r (09 Nov 2009)

  09 Nov 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009r.ebuild:
  Version bump #292549 by Rodrigo Severo.

  08 Nov 2009; nixnut <nixnut@gentoo.org> timezone-data-2009p.ebuild:
  ppc stable #291689

  03 Nov 2009; Jeroen Roovers <jer@gentoo.org> timezone-data-2009p.ebuild:
  Stable for HPPA (bug #291680).

*timezone-data-2009q (03 Nov 2009)

  03 Nov 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009q.ebuild:
  Version bump #291587 by Rodrigo Severo.

  31 Oct 2009; Brent Baude <ranger@gentoo.org> timezone-data-2009m.ebuild:
  Marking timezone-data-2009m ppc64 for bug 287016

*timezone-data-2009p (27 Oct 2009)

  27 Oct 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009p.ebuild:
  Version bump #290566 by Rodrigo Severo.

*timezone-data-2009o (20 Oct 2009)

  20 Oct 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009o.ebuild:
  Version bump #289728 by Rodrigo Severo.
