@@ -3,7 +3,9 @@ DIST tzcode2009r.tar.gz 191114 RMD160 237f47a92f212afce3f0030d17c13a4465ff78ac S
 DIST tzcode2009t.tar.gz 191325 RMD160 6071d69d9367211cfe2ea32c9467f7317bb511d2 SHA1 2bc3abe70dd8b83582c22edaa86bf066c5508a36 SHA256 97f64d7056d6c18e6b4e1619bf94fc625a3d08413d238e0c5a5faba714a2297f
 DIST tzdata2009s.tar.gz 184326 RMD160 3feadcbd8738b5ae1a3d6bba05a2c9644de9a1c1 SHA1 c870aab416411056a62a0ee69552010fc7fa499a SHA256 ee9000a0276675ed697f8d404edf80104fd338c3fb979907e4ee63ca83d65e5e
 DIST tzdata2009t.tar.gz 185585 RMD160 3aeb28e7b9780977181212754070728f8921b3c0 SHA1 bc4cc3cab99ddf819dd06c6a982d8e7ae5c39b5d SHA256 e9968d213481d7a869ba1afe6167d78d57320364487be9a74e04910a9fce3f85
+DIST tzdata2009u.tar.gz 185958 RMD160 e0647b3bf67a10ea40f843bc389ac22284d8a380 SHA1 4c5e24805e1d8989cc54e256b076e9345669ab05 SHA256 7cbd82597590ca279e042dbeace91553806c4b4dbff25c34b843a4f1d07e0384
 EBUILD timezone-data-2009s.ebuild 3193 RMD160 2aa044a39d685f7efde39434255deacda63f39de SHA1 0c962d8b7213b2830abe09059d97465eb18878fd SHA256 a991196feccbcbedc7007bb266d310dd6408b7da62073b202813af35ea562d48
 EBUILD timezone-data-2009t.ebuild 3160 RMD160 a5b1a18499dd56fdd36c23ca2d458b3b04cc64f1 SHA1 242d1353be2179e01b8bd7660c4fa40837d340aa SHA256 f31b43dfd3c9fdacc82cd6bea1f751d0e1c3bdd378630958dd0d71911f7b5f60
-MISC ChangeLog 27743 RMD160 6b878a3bcad294153e53fab9a6da7e7f611e26b1 SHA1 ac19c97058834561b4fd8b3d338cee68f5505e05 SHA256 65f786c0c33497b9e16ede76ff61826cf34cf8256499eb8ef3afc66eee780454
+EBUILD timezone-data-2009u.ebuild 3163 RMD160 4be95d408983e340eb2bb60139cbe4554be01d7e SHA1 90e3eb4355af9dbe3bcc4263dc96c0e668c2445a SHA256 62e20b00b93563066577976259146eab71558d747fa7e2c054635ff7e61652f9
+MISC ChangeLog 27903 RMD160 e95ad75f547e38fe298b9e2ad4e9243770637268 SHA1 c66b6e95c2f6d2665406ac7dd1f9754c4e4e5f30 SHA256 cbd71b808f166d8bcb0936d4f1b78f0b6b40dcbf6b24814005a42d0e56b0de1b
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
